--- a/index.html
+++ b/index.html
@@ -1,77 +1,130 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-   <link rel="shortcut icon" type="image/ico" href="img/favicon.gif" />
-   <link rel="stylesheet" type="text/css" href="style.css" />
-   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-   <title>Sécurité et isolation pour camping-car</title>
- </head>
- <body>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.gif" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <title>Sécurité et isolation pour camping-car</title>
+</head>
+
+<body>
     <div id="app">
-        <button @click=" mainContent = 'volet'">Volets tryptiques de pare-brise</button>
-        <button @click=" mainContent = 'baies'">Volets de baie</button>
-        <button @click=" mainContent = 'domes'">Volets de dômes</button>
+        <div class="container m-auto align-center">
+            <div class="mx-auto text-center">
+                <div class="text-7xl"></div>
+            </div>
 
 
-        <div v-show="mainContent === 'volet'">
-            <button @click="addVolet('Integral')">INTEGRAL</button>
-            <button @click="addVolet('Fourgons')">FOURGONS</button>
-            <button @click="addVolet('Profile')">PROFILE</button>
-            <button @click="addVolet('Capucine')">CAPUCINE</button>
-            <button @click="addVolet('Dors gabarit')">HORS GABARIT</button>
-        </div>
+            <section class="text-gray-600 body-font">
+                <div class="container px-5 py-24 mx-auto max-w-7x1">
+                    <div class="flex flex-wrap w-full mb-4 p-4">
+                        <div class="w-full mb-6 lg:mb-0">
+                            <h1 class="sm:text-4xl text-5xl font-medium font-bold title-font mb-2 text-gray-900">
+                                Démarrez votre devis</h1>
+                            <div class="text-3xl">Laissez-vous guider, votre devis en quelques secondes</div>
+                            <div class="h-1 w-20 bg-indigo-500 rounded"></div>
+                        </div>
+                    </div>
+                    <div class="flex flex-wrap -m-4">
+                        <div class="xl:w-1/3 md:w-1/2 p-4">
+                            <div class="bg-white shadow-2xl p-6 rounded-lg flex flex-col">
+                                <img class="lg:h-60 xl:h-56 md:h-64 sm:h-72 xs:h-72 h-72  rounded w-full object-cover object-center mb-6"
+                                    src="src/img/triptyque.png" alt="Image Size 720x400">
+                                <h2 class="text-lg text-gray-900 font-medium title-font mb-4 text-center">Volets tryptiques de pare-brise</h2>
+                                <p class="leading-relaxed text-base text-center">Sélectionnez un volet triptyque de pare-brise en
+                                    fonction de votre camping-car.</p>
+                                <button class="py-3 px-6 text-white rounded-lg bg-red-500 shadow-lg block md:inline-block m-5" @click=" mainContent = 'volet'">Je souhaite un volets tryptiques de pare-brise</button>
+                            </div>
+                        </div>
 
-        <!-- <div v-show="mainContent === 'baies'">
+                        <div class="xl:w-1/3 md:w-1/2 p-4">
+                            <div class="bg-white shadow-2xl p-6 rounded-lg flex flex-col">
+                                <img class="lg:h-60 xl:h-56 md:h-64 sm:h-72 xs:h-72 h-72  rounded w-full object-cover object-center mb-6"
+                                    src="src/img/baies.png" alt="Image Size 720x400">
+                                <h2 class="text-lg text-gray-900 font-medium title-font mb-4 text-center">Volets de baie</h2>
+                                <p class="leading-relaxed text-base text-center">Renseignez les différentes dimensions de vos baies de votre camping-car</p>
+                                <button class="py-3 px-6 text-white rounded-lg bg-red-500 shadow-lg block md:inline-block m-5" @click=" mainContent = 'baies'">Je souhaite des Volets de baies</button>
+                            </div>
+                        </div>
+
+                        <div class="xl:w-1/3 md:w-1/2 p-4">
+                            <div class="bg-white shadow-2xl p-6 rounded-lg flex flex-col ">
+                                <img class="lg:h-60 xl:h-56 md:h-64 sm:h-72 xs:h-72 h-72  rounded w-full object-cover object-center mb-6"
+                                    src="src/img/domes.png" alt="Image Size 720x400">
+                                <h2 class="text-lg text-gray-900 font-medium title-font mb-4 text-center">Volets de dômes</h2>
+                                <p class="leading-relaxed text-base text-center">Sélectionnez un volet triptyque de pare-brise en
+                                    fonction de votre camping-car.</p>
+                                <button class="py-3 px-6 text-white rounded-lg bg-red-500 shadow-lg block md:inline-block m-5" @click=" mainContent = 'domes'">Je souhaite des volets de dômes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+            <div v-show="mainContent === 'volet'">
+                <button class="text-yellow-600" @click="addVolet('Integral')">INTEGRAL</button>
+                <button @click="addVolet('Fourgons')">FOURGONS</button>
+                <button @click="addVolet('Profile')">PROFILE</button>
+                <button @click="addVolet('Capucine')">CAPUCINE</button>
+                <button @click="addVolet('Dors gabarit')">HORS GABARIT</button>
+            </div>
+
+            <!-- <div v-show="mainContent === 'baies'">
             <input v-on:keypress.enter="addBaies" v-model="typedBaie" placeholder="input 1">
             <input v-on:keypress.enter="addBaies" v-model="typedBaie" placeholder="input 2">
-        </div> -->
+            </div> -->
 
-        <div v-show="mainContent === 'baies'">
-            <label for="height">Height</label>
-            <input id="height" v-on:keypress.enter="addBaies" v-model="typedBaieHeight" placeholder="input 1">
-            <label for="width">Width</label>
-            <input id="width" name="width" v-on:keypress.enter="addBaies" v-model="typedBaieWidth" placeholder="input 2">
-        </div>
-
-        <div v-show="mainContent === 'domes'">
-            <button @click="addVoletDomes('Volet de dôme'); countVoletDeDome++">Volet de dôme</button>
-            <button @click="addVoletLanterneau('Volet de lanterneau'); countLanterneau++">Volet de lanterneau</button>
-            <button @click="addVoletSkydome('Volet de skydôme')">Volet de skydôme</button>
-        </div>
-
-        <div>
-            {{ volet }}
-            <p v-for="(baie, index) in baies">
-                 Baie {{ index +1 }}:{{ baie.height }} x {{ baie.width }}
-            </p>   
-            
-            <div v-if="voletDomes.length === 1">
-                <p v-for="(voletDome, index) in voletDomes">
-                    {{ index +1 }} X {{ voletDome }}
-                </p> 
-            </div>
-            <div v-else-if="voletDomes.length >= 2">
-                <p >
-                    {{ countVoletDeDome }} X Volet de dôme
-                </p> 
+            <div v-show="mainContent === 'baies'">
+                <label for="height">Height</label>
+                <input id="height" v-on:keypress.enter="addBaies" v-model="typedBaieHeight" placeholder="input 1">
+                <label for="width">Width</label>
+                <input id="width" name="width" v-on:keypress.enter="addBaies" v-model="typedBaieWidth"
+                    placeholder="input 2">
             </div>
 
-
-           <div v-if="voletLanterneaus.length ===1">
-                <p v-for="(voletLanterneau, index) in voletLanterneaus">
-                    {{ index +1 }} X {{ voletLanterneau }}
-               </p> 
+            <div v-show="mainContent === 'domes'">
+                <button @click="addVoletDomes('Volet de dôme'); countVoletDeDome++">Volet de dôme</button>
+                <button @click="addVoletLanterneau('Volet de lanterneau'); countLanterneau++">Volet de
+                    lanterneau</button>
+                <button @click="addVoletSkydome('Volet de skydôme')">Volet de skydôme</button>
             </div>
 
-               <div v-else-if="voletLanterneaus.length >= 2">
-                   <p>
-                       {{ countLanterneau }} X Volet de lanterneau 
-                   </p>
-               </div>
-                {{ voletSkydome }}  
-           </div>
-                   
+            <div>
+                {{ volet }}
+                <p v-for="(baie, index) in baies">
+                    Baie {{ index +1 }}:{{ baie.height }} x {{ baie.width }}
+                </p>
+
+                <div v-if="voletDomes.length === 1">
+                    <p v-for="(voletDome, index) in voletDomes">
+                        {{ index +1 }} X {{ voletDome }}
+                    </p>
+                </div>
+                <div v-else-if="voletDomes.length >= 2">
+                    <p>
+                        {{ countVoletDeDome }} X Volet de dôme
+                    </p>
+                </div>
+
+
+                <div v-if="voletLanterneaus.length ===1">
+                    <p v-for="(voletLanterneau, index) in voletLanterneaus">
+                        {{ index +1 }} X {{ voletLanterneau }}
+                    </p>
+                </div>
+
+                <div v-else-if="voletLanterneaus.length >= 2">
+                    <p>
+                        {{ countLanterneau }} X Volet de lanterneau
+                    </p>
+                </div>
+                {{ voletSkydome }}
+            </div>
         </div>
     </div>
 
@@ -79,45 +132,46 @@
 
     <script>
         const vue = new Vue({
-          el : "#app", 
-          data : {
-            mainContent: "",
-            volet:"",
-            typedBaieHeight:"",
-            typedBaieWidth:"",
-            baies:[],
-            voletDomes:[],
-            voletLanterneaus:[],
-            voletSkydome:"", 
-            countVoletDeDome:0,
-            countLanterneau: 0,
+            el: "#app",
+            data: {
+                mainContent: "",
+                volet: "",
+                typedBaieHeight: "",
+                typedBaieWidth: "",
+                baies: [],
+                voletDomes: [],
+                voletLanterneaus: [],
+                voletSkydome: "",
+                countVoletDeDome: 0,
+                countLanterneau: 0,
 
-          },
-          methods : {
-            addVolet: function (model){
-                this.volet = model
-            }, 
-            addBaies: function (){
-                if(this.typedBaieHeight != "" && this.typedBaieWidth != "" ){
-                    this.baies.push({
-                        height: this.typedBaieHeight,
-                        width: this.typedBaieWidth
-                    })
+            },
+            methods: {
+                addVolet: function (model) {
+                    this.volet = model
+                },
+                addBaies: function () {
+                    if (this.typedBaieHeight != "" && this.typedBaieWidth != "") {
+                        this.baies.push({
+                            height: this.typedBaieHeight,
+                            width: this.typedBaieWidth
+                        })
+                    }
+                    this.typedBaieHeight = ""
+                    this.typedBaieWidth = ""
+                },
+                addVoletDomes: function (model) {
+                    this.voletDomes.push(model)
+                },
+                addVoletLanterneau: function (model) {
+                    this.voletLanterneaus.push(model)
+                },
+                addVoletSkydome: function (model) {
+                    this.voletSkydome = model
                 }
-                this.typedBaieHeight=""
-                this.typedBaieWidth=""
-            }, 
-            addVoletDomes: function (model){
-                this.voletDomes.push(model)
-            },
-            addVoletLanterneau: function (model){
-                this.voletLanterneaus.push(model)
-            },
-            addVoletSkydome: function (model){
-                this.voletSkydome = model
             }
-          }
-      });
-      </script>
- </body>
+        });
+    </script>
+</body>
+
 </html>
