--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- import components -->
+    <script src="src/js/productCard.js"></script>
     <title>Sécurité et isolation pour camping-car</title>
 </head>
 
@@ -24,50 +27,17 @@
                         <div class="h-1 w-20 bg-indigo-500 rounded"></div>
                     </div>
                 </div>
+
                 <div class="flex flex-wrap md:mx-12">
-                    <div class="xl:w-1/3 md:w-1/2 p-4">
-                        <div class="bg-white shadow-2xl p-6 rounded-lg flex flex-col">
-                            <img class="lg:h-60 xl:h-56 md:h-64 sm:h-72 xs:h-72 h-72  rounded w-full object-cover object-center mb-6"
-                                src="src/img/triptyque.png" alt="Image Size 720x400">
-                            <h2 class="text-lg text-gray-900 font-medium title-font mb-4 text-center">Volets tryptiques
-                                de pare-brise</h2>
-                            <p class="leading-relaxed text-base text-center">
-                                Sélectionnez un volet triptyque de pare-brise en fonction de votre camping-car.
-                            </p>
-                            <button
-                                class="py-3 px-6 text-white rounded-lg bg-red-500 shadow-lg block md:inline-block m-5"
-                                @click=" mainContent = 'volet'">Je souhaite un volets tryptiques</button>
-                        </div>
-                    </div>
-
-                    <div class="xl:w-1/3 md:w-1/2 p-4">
-                        <div class="bg-white shadow-2xl p-6 rounded-lg flex flex-col">
-                            <img class="lg:h-60 xl:h-56 md:h-64 sm:h-72 xs:h-72 h-72  rounded w-full object-cover object-center mb-6"
-                                src="src/img/baies.png" alt="Image Size 720x400">
-                            <h2 class="text-lg text-gray-900 font-medium title-font mb-4 text-center">Volets de baie
-                            </h2>
-                            <p class="leading-relaxed text-base text-center">
-                                Renseignez les différentes dimensions de vos baies de votre camping-car
-                            </p>
-                            <button
-                                class="py-3 px-6 text-white rounded-lg bg-red-500 shadow-lg block md:inline-block m-5"
-                                @click=" mainContent = 'baies'">Je souhaite des Volets de baies</button>
-                        </div>
-                    </div>
-
-                    <div class="xl:w-1/3 md:w-1/2 p-4">
-                        <div class="bg-white shadow-2xl p-6 rounded-lg flex flex-col ">
-                            <img class="lg:h-60 xl:h-56 md:h-64 sm:h-72 xs:h-72 h-72  rounded w-full object-cover object-center mb-6"
-                                src="src/img/domes.png" alt="Image Size 720x400">
-                            <h2 class="text-lg text-gray-900 font-medium title-font mb-4 text-center">Volets de dômes
-                            </h2>
-                            <p class="leading-relaxed text-base text-center">
-                                Sélectionnez un volet triptyque de pare-brise en fonction de votre camping-car.</p>
-                            <button
-                                class="py-3 px-6 text-white rounded-lg bg-red-500 shadow-lg block md:inline-block m-5"
-                                @click=" mainContent = 'domes'">Je souhaite des volets de dômes</button>
-                        </div>
-                    </div>
+                    <product-card 
+                    v-for="productCardContent in productsCardContent"
+                        :title= "productCardContent.title"
+                        :imgsrc="productCardContent.imgsrc"
+                        :text="productCardContent.text"
+                        :clickmaincontent="productCardContent.clickmaincontent"
+                        :buttoncontent="productCardContent.buttoncontent">
+                        <p>{{ productCardContent.title }}</p>
+                    </product-card>
                 </div>
             </div>
         </section>
@@ -166,7 +136,7 @@
                             <div class="flex justify-center mt-6">
                                 <!-- TODO: FAIRE LA FUNCT ONLICK   -->
                                 <button
-                                    class="bg-red-900 text-white font-extrabold text-lg rounded-full px-6 py-3">Rechercher
+                                    class="bg-red-900 text-white font-extrabold text-lg rounded-full px-6 py-3">Ajouter une baie
                                 </button>
                             </div>
                         </div>
@@ -239,6 +209,33 @@
                 voletSkydome: "",
                 countVoletDeDome: 0,
                 countLanterneau: 0,
+                productsCardContent:[
+                    {
+                        title:"Volets tryptiques de pare-brise",
+                        imgsrc:"src/img/triptyque.png",
+                        text:"Sélectionnez un volet triptyque de pare-brise en fonction de votre camping-car.",
+                        clickmaincontent:"volet",
+                        buttoncontent:"Je souhaite un volets tryptiques"
+                    },
+                    {
+                        title:"Volets de baie",
+                        imgsrc:"src/img/baies.png",
+                        text:"Renseignez les différentes dimensions de vos baies de votre camping-car",
+                        clickmaincontent:"baies",
+                        buttoncontent:"Je souhaite des volets de baies"
+                    },
+                    {
+                        title:"Volets de dômes",
+                        imgsrc:"src/img/domes.png",
+                        text:"Sélectionnez un volet triptyque de pare-brise en fonction de votre camping-car.",
+                        clickmaincontent:"domes",
+                        buttoncontent:"Je souhaite des volets de dômes"
+                    },
+                ],
+                // FROM API
+                apiAllTryptique:null,
+                apiPriceBaie:null,
+                apiAllDome:null
 
             },
             methods: {
@@ -264,6 +261,11 @@
                 addVoletSkydome: function (model) {
                     this.voletSkydome = model
                 }
+            },
+            mounted () {
+                axios
+                .get('https://nouvelair.net/wp-json/nouvelair/api/alltriptyque')
+                .then(response => (this.apiAllTryptique = response))
             }
         });
     </script>
